fix: change column gaps

--- a/project-management-app/src/app/board/components/column/column.component.scss
+++ b/project-management-app/src/app/board/components/column/column.component.scss
@@ -5,7 +5,7 @@
   flex-basis: 0;
 
   max-width: 400px;
-  margin: 0 25px 25px 25px;
+  margin: 0 15px 15px 15px;
   padding: 25px;
 
   border-radius: 4px;
